# honeydew

./: .gitignore  LICENSE  README.md  pyproject.toml
honeydew/: _types.py
src/honeydew/: __init__.py  __main__.py
